Delete unused image and update login and register CSS

--- a/public/css/create.css
+++ b/public/css/create.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
 
 :root {
   --headerbg: #4f4666;
@@ -28,8 +29,32 @@ header {
   width: 100%;
   background-color: var(--headerbg);
   display: flex;
+}
+
+.headerbox1 {
+  width: 91%;
+  display: flex;
   align-items: center;
-  justify-content: space-around;
+}
+
+.headerbox1 img {
+  width: 100px;
+  padding-bottom: 10px;
+  height: 60px;
+  margin: 0px 10px 0px 20px;
+  object-fit: cover;
+}
+
+.headerbox1 a {
+  margin: 0px 0px 0px 20px;
+  font-weight: 700;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+}
+
+.headerbox2 {
+  display: flex;
+  align-items: center;
+  width: 9%;
 }
 
 header a {
@@ -37,7 +62,7 @@ header a {
   font-size: 24px;
   font-weight: 400;
   color: var(--txt);
-  padding: 2px 7px 4px 7px;
+  padding: 4px 10px 6px 10px;
   transition: all 0.4s;
   border-radius: 10px;
 }
@@ -50,7 +75,6 @@ ul {
   list-style: none;
   background-color: var(--headerbg);
   position: relative;
-  transform: translateX(100px);
   z-index: 999;
 }
 
@@ -103,11 +127,12 @@ ul li:hover ul.dropdown {
 
 .mainbox {
   width: 100%;
-  height: 93%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 50px;
 }
 
 form {
@@ -115,6 +140,7 @@ form {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 input[type="text"] {
@@ -126,13 +152,6 @@ input[type="text"] {
   padding: 10px;
   color: var(--txt2);
   background-color: rgb(245, 245, 245);
-}
-
-.mainbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
 .mainbox h1 {
@@ -181,4 +200,18 @@ input[type="file"]::file-selector-button:active {
 .btn:hover {
   color: var(--txt2);
   background-color: #4caf50;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: var(--headerbg);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg2);
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9894a3;
 }
