--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
+/* font-family: "EB Garamond", serif; */
 :root {
   --headerbg: #4f4666;
   --bg: #2e2a38;
@@ -28,8 +29,30 @@ header {
   width: 100%;
   background-color: var(--headerbg);
   display: flex;
+}
+
+.headerbox1 {
+  width: 91%;
+  display: flex;
   align-items: center;
-  justify-content: space-around;
+}
+
+.headerbox1 img {
+  width: 100px;
+  padding-bottom: 10px;
+  height: 60px;
+  margin: 0px 10px 0px 20px;
+  object-fit: cover;
+}
+
+.headerbox1 a {
+  margin: 0px 0px 0px 20px;
+}
+
+.headerbox2 {
+  display: flex;
+  align-items: center;
+  width: 9%;
 }
 
 header a {
@@ -37,9 +60,11 @@ header a {
   font-size: 24px;
   font-weight: 400;
   color: var(--txt);
-  padding: 2px 7px 4px 7px;
+  padding: 4px 10px 6px 10px;
   transition: all 0.4s;
   border-radius: 10px;
+  font-weight: 700;
+  font-family: "M PLUS Rounded 1c", sans-serif;
 }
 
 header a:hover {
@@ -113,9 +138,9 @@ header a:hover {
   text-decoration: none;
   font-style: normal;
   color: var(--txt);
-  font-weight: 700;
+  font-weight: 400;
   font-size: x-large;
-  font-family: "Raleway", sans-serif;
+  font-family: "Fredoka", sans-serif;
 }
 
 .mainbox {
@@ -188,7 +213,6 @@ ul {
   list-style: none;
   background-color: var(--headerbg);
   position: relative;
-  transform: translateX(100px);
   z-index: 999;
 }
 
@@ -204,6 +228,8 @@ ul li a {
   text-decoration: none;
   text-align: center;
   font-size: large;
+  font-family: "Fredoka", sans-serif;
+  font-weight: 400;
 }
 
 ul li ul.dropdown li {
@@ -237,6 +263,15 @@ ul li:hover ul.dropdown {
   border: 2px solid var(--txt);
   object-fit: cover;
   margin: 3px 10px 0px 10px;
+}
+
+footer {
+  background-color: #211e2969;
+  color: var(--txt);
+  text-align: center;
+  padding: 20px 0px;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 @media screen and (max-width: 1536px) {
