--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -8,29 +8,32 @@
   </head>
   <body>
     <header> 
-      <a href="/">Home</a>
-      <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
-      <a href="/create">Add Movie</a>
-      <a href="/movieupdate">Update Movie</a>
-      <a href="/moviedelete">Delete Movie</a>
-      <% }%>
-      <% if (moviedata.roles == "User" ){ %>
-      <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
-      <% }%>
-      <% if (!moviedata.userName) { %>
-      <a href="/register">Sign Up</a>
-      <a href="/login">Sign In</a>
-      <% } %>
+      <div class="headerbox1">
+        <img src="../images/Logo_JS_Pro.png" alt="">
+        <a href="/">Home</a>
+        <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
+          <a href="/movies">Movies</a>
+          <a href="/users">Users</a>
+          <% }%>
+        <% if (moviedata.roles == "User"){ %>
+        <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
+        <% }%>
+      </div>
+      <div class="headerbox2"> 
+        <% if (!moviedata.userName) { %>
+        <a class="signup" href="/login">Sign In</a>
+        <% } %>
       <% if (moviedata.userName) { %>
-      <ul>
-        <li>
+        <ul>
+          <li>
           <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
-        <ul class="dropdown">
-          <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/logout">Sign out</a></li>
+          <ul class="dropdown">
+            <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
+            <li><a href="/logout">Sign out</a></li>
+          </ul>
+          </li>
         </ul>
-        </li>
-      </ul>
+      </div>
       <% } %>
     </header>
     <div class="mainbox">
@@ -41,7 +44,25 @@
             <input type="text" name="director" placeholder="Director"/>
             <br><br>
             <input type="file" name="imageFile" />
-            <br>
+            <br><br>
+            <textarea name="desc" id="" cols="35" rows="5" placeholder="Description" style=" resize: none;"></textarea>
+            <br><br>
+            <input type="text" name="release_date" placeholder="MM/DD/YYYY"/>
+            <br><br>
+            <input type="text" name="rating" placeholder="13+"/>
+            <br><br>
+            <input type="text" name="genre" placeholder="Romantic/Action"/>
+            <br><br>
+            <input type="text" name="running_time" placeholder="180"/>
+            <br><br>
+            <label for="">Type:</label>
+            <select name="type">
+              <option name="type" value="Movie">Movie</option>
+              <option name="type" value="Series">Series</option>
+            </select>
+            <br><br>
+            <input type="text" name="teaser_url" placeholder="Teaser URL"/>
+            <br><br>
             <input type="submit" value="Add Movie" class="btn"/>
           </form>
     </div>
