--- a/public/views/movies.ejs
+++ b/public/views/movies.ejs
@@ -4,61 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetBoss</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/users.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   </head>
   <body>
     <header> 
-      <a href="/">Home</a>
-      <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
-      <a href="/create">Add Movie</a>
-      <a href="/movieupdate">Update Movie</a>
-      <a href="/moviedelete">Delete Movie</a>
-      <% }%>
-      <% if (moviedata.roles == "User"){ %>
-      <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
-      <% }%>
-      <% if (!moviedata.userName) { %>
-      <a href="/register">Sign Up</a>
-      <a href="/login">Sign In</a>
-      <% } %>
-      <% if (moviedata.userName) { %>
-      <ul>
-        <li>
-        <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
-        <ul class="dropdown">
-          <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
-          <li><a href="/logout">Sign out</a></li>
-        </ul>
-        </li>
-      </ul>
-      <% } %>
-    </header>
-    <% if (moviedata.userName) { %>
-      <h2 class="fade-in-right "><i class="fa-solid fa-hands-clapping"></i> Welcome, <%= moviedata.userName %> !</h2>
-    <% } else { %>
-      <h2 class="fade-in-right " style="width: 170px;"><i class="fa-solid fa-hands-clapping"></i> Welcome !</h2>
-    <% } %>
-    <div class="mainbox">
-      <div>
-        <% if (movies.length > 0) { %>
-        <a href="/movie/<%=movies[0].movie_id%>" class="moviedes">
-          <p><%= movies[0].title %></p>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, fuga!</p>
-        </a> 
-        <a href="/movie/<%=movies[0].movie_id%>"><img src="/images/<%= movies[0].imageFile %>" class="bigimg"></a>
-        <% } else {%>
-          <h1>Let's start add some movie</h1>
-        <% } %>
-      </div>
-
-      <% for(var i = 1; i < movies.length; i++){%>
-        <div class="imgitem">
-          <a href="/movie/<%=movies[i].movie_id%>"><img src="/images/<%= movies[i].imageFile %>"></a>
-          <a href="/movie/<%=movies[i].movie_id%>"><%= movies[i].title %></a>
+        <div class="headerbox1">
+          <img src="../images/Logo_JS_Pro.png" alt="">
+          <a href="/">Home</a>
+          <% if (moviedata.userName != "" && moviedata.roles == "Admin") { %>
+            <a href="/create">Add Movie</a>
+            <a href="/users">Users</a>
+            <% }%>
+          <% if (moviedata.roles == "User"){ %>
+          <a href="/favorite/<%=moviedata.user_id%>">Favorite</a>
+          <% }%>
         </div>
+        <div class="headerbox2"> 
+          <% if (!moviedata.userName) { %>
+          <a class="signup" href="/login">Sign In</a>
+          <% } %>
+        <% if (moviedata.userName) { %>
+          <ul>
+            <li>
+            <img src="../images/<%=moviedata.profilePicture%>" alt="" class="profile">
+            <ul class="dropdown">
+              <li><a href="/user/<%=moviedata.user_id%>">Edit User</a></li>
+              <li><a href="/logout">Sign out</a></li>
+            </ul>
+            </li>
+          </ul>
+        </div>
+        <% } %>
+      </header>
+    <div class="mainbox">
+      <table>
+        <tr>
+          <th></th><th style="text-align:center;">ID</th><th style="text-align:center;">Title</th><th style="text-align:center;">Director</th><th style="text-align:center;">Type</th><th colspan="2" style="text-align: center;">Action</th>
+        </tr>
+      <% for(let i = 0; i < movies.length; i++){%>
+          <tr>
+            <td><img src="../images/<%=movies[i].imageFile%>" alt="" class="profile"></td>
+            <td style="text-align: center; width: 50px;"><%=movies[i].movie_id%></td>
+            <td style="max-width: 150px; text-align:center;"><%=movies[i].title %></td>
+            <td style="max-width: 150px; text-align:center;"><%=movies[i].director %></td>
+            <td style="max-width: 150px; text-align:center;"><%=movies[i].type %></td>
+            <td style="text-align: center; width: 80px;"><a href="/update/<%=movies[i].movie_id%>" style="color:#3ff78b">Edit</a></td>
+            <td style="text-align: center; width: 80px;"> <a href="/delete/<%=movies[i].movie_id%>"onclick="return confirm('Do you confirm to delete this movie?')" style="color:#f73f3f">Delete</a></td>
+          </tr>
       <%}%>
+    </table>
     </div>
   </body>
 </html>
