--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -13,27 +13,22 @@
   </head>
   <body>
     
-    <div class="mainbox">
+  <div class="mainbox">
       <div>
-        <h1>NetBoss</h1>
-        <p>Tonight, we gather to affirm the greatness of our nation - not because of the height of our skyscrapers, or the power of our military, or the size of our economy. </p>
-    </div>
-  <div>
-    <h1 class="login">Register</h1>
-    <% if (checkUserDupe) { %>
-      <p><%=checkUserDupe%></p>
-    <% } %>
+        <h1 class="login">Register</h1>
+        <form method="post" action="/register">
+          <% if (checkUserDupe) { %>
+            <p class="checklogin"><%=checkUserDupe%></p>
+          <% } %>
+          <br>
+          <input type="text" name="name" minlength="3"  maxlength="10" placeholder="Username" required/>
+          <br><br>
+          <input class="password" type="text" name="password" minlength="1" placeholder="Password" required/>
+          <input type="submit" value="Register" class="btn"/>
+        </form>
+        <p class="signin">Already have an account?⠀<a href="/login">Sign In!</a></p>
     
-    <form method="post" action="/register">
-      <br>
-      <input type="text" name="name" minlength="1"  maxlength="10" placeholder="Username"/>
-      <br><br>
-      <input class="password" type="text" name="password" minlength="1" placeholder="Password"/>
-      <input type="submit" value="Register" class="btn"/>
-    </form>
-    <p class="signin">Already have an account?⠀<a href="/login">Sign In!</a></p>
-  </div>
+    </div>
 </div>
-    <a href="/">Back to List</a>
   </body>
 </html>
