Add new images to public directory

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -67,13 +67,28 @@
         </div>
       <%}%>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
-    <footer>
+    <footer style="margin: 300px 0 0 0;">
       <p>NetBoss &copy; 2024 KMUTNB Project</p>
-      <p>Pawee Indulakshana IT</p>
-      <p>Jiramet Sakulkittavorn IT</p>
-      <p>Nuttawat Amorntanont IT</p>
+      <table>
+        <tr>
+          <th>Developers</th>
+          <th>GitHub</th>
+        </tr>
+        <tr>
+          <td>Pawee Indulakshana</td>
+          <td><a href="https://github.com/snailsqz"><i class="fa-brands fa-github" style="font-size: 20px; color:aliceblue;"></i></a></td>
+        </tr>
+        <tr>
+          <td>Jiramet Sakulkittavorn</td>
+          <td><a href="https://github.com/snailsqz"><i class="fa-brands fa-github" style="font-size: 20px; color:aliceblue;"></i></a></td>
+        </tr>
+        <tr>
+          <td>Nuttawat Amorntanont</td>
+          <td><a href="https://github.com/Nuttawat28"><i class="fa-brands fa-github" style="font-size: 20px; color:aliceblue;"></i></a></td>
+        </tr>
+
+      </table>
       <p>For Educational Purpose Only</p>
       
     </footer>
