--- a/public/views/movie.ejs
+++ b/public/views/movie.ejs
@@ -101,7 +101,7 @@
   </div>
   <div class="box3">
     <hr>
-    <h1>Comment Section</h1>
+    <h1 style="font-weight: 400;">Comments (<%=reviewData.length%>)</h1>
     <div class="boxreview">
       <% if (moviedata.userName != "" ) { %>
         <label for="">Score</label>  
