--- a/public/css/index.css
+++ b/public/css/index.css
@@ -269,9 +269,18 @@ footer {
   background-color: #211e2969;
   color: var(--txt);
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 20px 0px;
   font-size: 14px;
   font-weight: 300;
+}
+table th {
+  color: var(--txt);
+  font-size: 18px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 1536px) {
@@ -285,9 +294,23 @@ footer {
     width: 267px;
   }
 }
+
 @media screen and (max-width: 1024px) {
   .imgitem {
     width: 234px;
+  }
+  .imgitem a {
+    font-size: 20px;
+  }
+  header a {
+    font-size: 20px;
+  }
+  .mainbox > div:nth-of-type(1) > a:nth-of-type(1) {
+    font-size: 50px;
+  }
+
+  .mainbox div:nth-of-type(1) p:nth-of-type(2) {
+    font-size: 20px;
   }
 }
 
@@ -295,16 +318,10 @@ footer {
   .imgitem {
     width: 232px;
   }
-}
-
-@media screen and (max-width: 426px) {
   header a {
-    font-size: 15px;
+    font-size: 18px;
   }
-  .imgitem {
-    width: 180px;
-  }
-  .imgitem a {
-    font-size: 15px;
+  .headerbox2 {
+    width: 12%;
   }
 }
