Update login and register pages

--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -24,7 +24,8 @@
       </div>
       <div>
         <h1>NetBoss</h1>
-        <p>Tonight, we gather to affirm the greatness of our nation - not because of the height of our skyscrapers, or the power of our military, or the size of our economy. </p>
+          <p style="text-indent: 20px;">NetBoss is the ultimate movie streaming platform that brings you the best selection of movies from around the world. With NetBoss, you can enjoy a wide range of genres, including action, romance, comedy, thriller, 
+            and more. Our extensive library of movies ensures that there is always something for everyone.</p>
       </div>
     </div>
   </body>
