--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -23,7 +23,7 @@
           <br>
           <input type="text" name="name" minlength="3"  maxlength="10" placeholder="Username" required/>
           <br><br>
-          <input class="password" type="text" name="password" minlength="1" placeholder="Password" required/>
+          <input class="password" type="text" name="password" minlength="4" maxlength="15" placeholder="Password" required/>
           <input type="submit" value="Register" class="btn"/>
         </form>
         <p class="signin">Already have an account?⠀<a href="/login">Sign In!</a></p>
