--- a/public/css/create.css
+++ b/public/css/create.css
@@ -133,14 +133,19 @@ ul li:hover ul.dropdown {
   align-items: center;
   flex-direction: column;
   margin-top: 50px;
+  padding-bottom: 200px;
 }
 
 form {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  height: 100%;
+  flex-direction: column;
+  width: 40%;
+  height: 70%;
+  padding-top: 50px;
+  border-radius: 30px;
+  background-color: var(--headerbg);
 }
 
 input[type="text"] {
@@ -154,6 +159,27 @@ input[type="text"] {
   background-color: rgb(245, 245, 245);
 }
 
+textarea {
+  font-size: large;
+  border-radius: 7px;
+  border: 0px;
+  height: 100px;
+  width: 260px;
+  padding: 10px;
+  color: var(--txt2);
+  background-color: rgb(245, 245, 245);
+}
+
+label {
+  color: var(--txt);
+}
+
+select {
+  font-size: large;
+  border-radius: 5px;
+  width: 200px;
+}
+
 .mainbox h1 {
   font-weight: 600;
   font-size: 34px;
@@ -161,12 +187,35 @@ input[type="text"] {
   padding-bottom: 30px;
 }
 
+.info {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
+  align-items: center;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
+  align-items: center;
+}
+
 input[type="file"] {
-  color: var(--txt);
+  color: var(--);
 }
 
 input[type="file"]::file-selector-button {
-  border-radius: 4px;
+  border-radius: 10px;
   padding: 0 16px;
   height: 40px;
   cursor: pointer;
@@ -175,15 +224,16 @@ input[type="file"]::file-selector-button {
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
   margin-left: 10%;
   margin-right: 16px;
-  transition: background-color 200ms;
+  transition: all 1ms;
 }
 
 input[type="file"]::file-selector-button:hover {
-  background-color: #d6d6d6;
+  background-color: #4caf50;
+  animation: 1 ease-in-out;
 }
 
 input[type="file"]::file-selector-button:active {
-  background-color: #a7a7a8;
+  background-color: #4caf50;
 }
 
 .btn {
@@ -200,6 +250,7 @@ input[type="file"]::file-selector-button:active {
 .btn:hover {
   color: var(--txt2);
   background-color: #4caf50;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
