--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -39,31 +39,39 @@
     <div class="mainbox">
         <h1>Add Movie</h1>
           <form method="post" action="/create" enctype="multipart/form-data">
-            <input type="text" name="title" placeholder="Title"/>
-            <br><br>
-            <input type="text" name="director" placeholder="Director"/>
-            <br><br>
-            <input type="file" name="imageFile" />
-            <br><br>
-            <textarea name="desc" id="" cols="35" rows="5" placeholder="Description" style=" resize: none;"></textarea>
-            <br><br>
-            <input type="text" name="release_date" placeholder="MM/DD/YYYY"/>
-            <br><br>
-            <input type="text" name="rating" placeholder="13+"/>
-            <br><br>
-            <input type="text" name="genre" placeholder="Romantic/Action"/>
-            <br><br>
-            <input type="text" name="running_time" placeholder="180"/>
-            <br><br>
-            <label for="">Type:</label>
-            <select name="type">
-              <option name="type" value="Movie">Movie</option>
-              <option name="type" value="Series">Series</option>
-            </select>
-            <br><br>
-            <input type="text" name="teaser_url" placeholder="Teaser URL"/>
-            <br><br>
-            <input type="submit" value="Add Movie" class="btn"/>
+            <div class="info">
+              <div class="left">
+                <input type="text" name="title" placeholder="Title"/>
+                <br><br>
+                <input type="text" name="director" placeholder="Director"/>
+                <br><br>
+                <textarea name="desc" id="" cols="35" rows="5" placeholder="Description" style=" resize: none;"></textarea>
+                <br><br>
+                <input type="text" name="teaser_url" placeholder="Teaser URL"/>
+                <br><br>
+                <input style="color: #faf0e6;" type="file" name="imageFile" />
+                <br><br>
+              </div>
+              <div class="right">
+                <input type="text" name="release_date" placeholder="MM/DD/YYYY"/>
+                <br><br>
+                <input type="text" name="rating" placeholder="13+"/>
+                <br><br>
+                <input type="text" name="genre" placeholder="Romantic/Action"/>
+                <br><br>
+                <input type="text" name="running_time" placeholder="180"/>
+                <br><br>
+                <label for="">Type:
+                <select name="type">
+                  <option name="type" value="Movie">Movie</option>
+                  <option name="type" value="Series">Series</option>
+                </select>
+                <br><br>
+                <input type="submit" value="Add Movie" class="btn"/>
+
+              </label>
+              </div>
+            </div>
           </form>
     </div>
   </body>
