--- a/public/views/update.ejs
+++ b/public/views/update.ejs
@@ -36,34 +36,41 @@
       </div>
       <% } %>
     </header>
+    <div class="mainbox">
     <h1>Update Movie</h1>
-    <form method="post" action="/update/<%=movies.movie_id%>" enctype="multipart/form-data">
-      <input type="text" name="title"  placeholder="<%= movies.title%>" value="<%= movies.title%>"/>
-      <br><br>
-      <input type="text"name="director" placeholder="<%= movies.director%>" value="<%= movies.director%>"/>
-      <br><br>
-      <label for="">Type:</label>
-        <select name="type" value="<%= movies.type%>">
-          <option name="type" value="Movie">Movie</option>
-          <option name="type" value="Series">Series</option>
-        </select>
-      <br><br>
-      <textarea name="desc" id="" cols="35" rows="5" placeholder="<%= movies.desc%>" value="<%= movies.desc%>" style=" resize: none;"></textarea>
-       <br><br>
-       <input type="text" name="release_date" placeholder="<%= movies.release_date%>" value="<%= movies.release_date%>"/>
-       <br><br>
-       <input type="text" name="rating" placeholder="<%= movies.rating%>" value="<%= movies.rating%>"/>
-       <br><br>
-       <input type="text" name="genre" placeholder="<%= movies.genre%>" value="<%= movies.genre%>"/>
-       <br><br>
-       <input type="text" name="running_time" placeholder="<%= movies.running_time%>" value="<%= movies.running_time%>"/>
-       <br><br>
-      <input type="file" name="imageFile" value="<%= movies.imageFile%>" value="<%= movies.imageFile%>"/>
-      <br><br>
-      <input type="text" name="teaser_url" placeholder="<%= movies.teaser_url%>" value="<%= movies.teaser_url%>"/>
-      <br><br>
-      <input type="submit" value="Update" />
-    </form>
-    <a href="/">Back to List</a>
+      <form method="post" action="/update/<%=movies.movie_id%>" enctype="multipart/form-data">
+        <div class="info">
+          <div class="left">
+            <input type="text" name="title"  placeholder="<%= movies.title%>" value="<%= movies.title%>"/>
+            <br><br>
+            <input type="text"name="director" placeholder="<%= movies.director%>" value="<%= movies.director%>"/>
+            <br><br>
+            <textarea name="desc" id="" cols="35" rows="5" placeholder="<%= movies.desc%>" value="<%= movies.desc%>" style=" resize: none;"></textarea>
+            <br><br>
+            <input type="text" name="teaser_url" placeholder="<%= movies.teaser_url%>" value="<%= movies.teaser_url%>"/>
+            <br><br>
+            <input type="file" name="imageFile" value="<%= movies.imageFile%>" value="<%= movies.imageFile%>"/>
+            <br><br>
+          </div>
+            <div class="right">
+              <input type="text" name="release_date" placeholder="<%= movies.release_date%>" value="<%= movies.release_date%>"/>
+              <br><br>
+              <input type="text" name="rating" placeholder="<%= movies.rating%>" value="<%= movies.rating%>"/>
+              <br><br>
+              <input type="text" name="genre" placeholder="<%= movies.genre%>" value="<%= movies.genre%>"/>
+              <br><br>
+              <input type="text" name="running_time" placeholder="<%= movies.running_time%>" value="<%= movies.running_time%>"/>
+              <br><br>
+              <label for="">Type:</label>
+              <select name="type" value="<%= movies.type%>">
+                <option name="type" value="Movie">Movie</option>
+                <option name="type" value="Series">Series</option>
+              </select>
+              <br><br>
+              <input type="submit" value="Update" class="btn" />
+            </div>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
